<resources>
    <string name="app_name">Menu_Activiy</string>
    <string name="title_home">Home</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_market">Market</string>
    <string name="title_profile">Profile</string>
    <string name="title_history">History</string>
    <string name="title_logout">Logout</string>
    <string name="title_activity_menu_navegation">Menu_Navegation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tucorreo@gmail.com</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_alarm">Alarm</string>
    <string name="menu_market">Market</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_history">History</string>
    <string name="menu_logout">Log Out</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="nameTest">Hello World</string>
    <string name="coffeText">Coffe</string>
    <string name="timeText">Time</string>
    <!--Button-->
    <string name="btnLogin">Ingresar</string>
    <string name="btnStart">Empezar</string>
    <string name="btnPay">Pagar con tarjeta</string>
    <string name="btnPagar">Pagar</string>
    <string name="btnPaypal">Pagar con Paypal</string>
    <!--Inputs-->
    <string name="emailHint">Usuario o Correo electrónico</string>
    <string name="passwordHint">Contraseña</string>
    <!--MainActivity2-->
    <string name="txtTitle">We are what we do</string>
    <string name="txtParagraph">Thousand of people are usign silent moon for smalls meditation</string>
    <string name="txtParagraph1">Conjunto de pequeños trozos de carne condimentados y ensartados en una caña o palo, que se cocinan asados o fritos; se suele vender por las calles.</string>
    <string name="txtParagraph2">Porciones  3</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="txtLogInCheck">Already have an account ?</string>
    <!--MainActivity3-->
    <string name="txtTitleLogin">Welcome Back !</string>
    <string name="btnFacebook">Continuar con facebook</string>
    <string name="btnGoogle">Continuar con google</string>
    <string name="cornerBtn">38dp</string>
    <string name="txtLogin">O LOGEARTE CON TU EMAIL</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="txtUsuario">Usuario o Correo electronico</string>
    <string name="txtContraseña">Contraseña</string>
    <!--Shopping Cart-->
    <string name="titleCart">Tu carrito</string>
    <string name="txtSubtotal">Subtotal</string>
    <string name="txtDescuento">Descuento</string>
    <string name="txtLaCarta">La Carta</string>
    <string name="txtRecomendacionesparati">Recomendaciones para ti</string>
    <string name="txtMenu1">Menu</string>
    <string name="txtMenu2">Comida Rapida</string>
    <string name="txtMenu3">Postre</string>
    <string name="txtMenu4">Bebidas</string>
    <string name="txtMenu5">Segundo</string>
    <string name="txtMenu6">Ají de Gallina</string>
    <string name="txtMenu7">Anticuchos</string>
    <string name="txtMenu8">Ensalada</string>
    <string name="txtMenu9">Brochetas</string>
    <string name="txtDescuento1">-10 %</string>
    <string name="txtTotal">Total</string>
    <string name="priceBrocheta">S/18.07</string>
    <string name="priceSubtotal">S/40.87</string>
    <string name="priceDescuento">S/8.07</string>
    <string name="priceTotal">S/32.80</string>
</resources>