<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".activity_seguirpantallaallogin">

    <EditText
        android:id="@+id/idPwd"
        android:layout_width="350dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_style"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/txtContraseña"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUser" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/grotesk_medium"
        android:text="@string/txtTitleLogin"
        android:textColor="@color/fontTitle"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/txtLogin"
        android:textColor="@color/fontTitle"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFacebook" />


    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/btnFacebook"
        android:drawableLeft="@drawable/ic_iconfacebook"
        android:padding="16dp"
        android:text="@string/btnFacebook"
        android:textAlignment="center"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/material_on_primary_disabled"
        android:drawableLeft="@drawable/ic_icongoogle"
        android:text="@string/btnGoogle"
        android:textAlignment="center"
        android:textColor="@color/fontTitle"
        app:cornerRadius="@android:dimen/app_icon_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFacebook" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="350dp"
        android:layout_height="54dp"
        android:layout_marginBottom="52dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/btnIngresar"
        android:textColor="@color/fontPrimary"
        app:backgroundTint="@color/primary"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputUser"
        android:layout_width="350dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_style"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/txtUsuario"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/txtLogInCheck"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIngresar"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>