<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".activity_seguirpantalla">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="121dp"
        android:layout_height="145dp"
        android:layout_marginTop="124dp"
        android:src="@drawable/ic_coffetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="231dp"
        android:layout_height="29dp"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/grotesk_medium"
        android:text="@string/txtTitle"
        android:textColor="@color/fontTitle"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/txtParagraph"
        android:layout_width="343dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/grotesk_medium"
        android:text="@string/txtParagraph"
        android:textColor="@color/fontSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <Button
        android:id="@+id/btn_Start"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/btn_round"

        android:text="@string/btnStart"
        android:textColor="@color/fontPrimary"
        app:backgroundTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtParagraph" />

</androidx.constraintlayout.widget.ConstraintLayout>